# TuDou

./: .gitignore  CMakeLists.txt  README.md
TuDou-Algorithm/: CMakeLists.txt  TuDou-Algorithm_global.h  TuDouAlgorithmManager.cpp  TuDouAlgorithmManager.h
TuDou-Qt/: CMakeLists.txt
TuDou_QML/: CMakeLists.txt  TuDou_qml.qmlproject  TuDou_qml.qmlproject.qtds  qmlmodules
TuDou_QML/content/: App.qml  App.qml.xKeIeh  CMakeLists.txt  TuDouMainWidget.ui.qml
TuDou_QML/imports/: CMakeLists.txt
TuDou_QML/imports/TuDou_qml/: CMakeLists.txt  qmldir
TuDou_QML/imports/TuDou_qml/designer/: plugin.metainfo
TuDou_QML/src/: import_qml_plugins.h
